Ajuste: Cambio de íconos al menú

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://js.arcgis.com/4.14/esri/themes/light/main.css" />
+  <link rel="stylesheet" href="assets/icofont/icofont/icofont.min.css">
 </head>
 
 <body>
